git-svn-id: https://www.seasar.org/svn/chura/trunk@151 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Images.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Images.properties
@@ -35,3 +35,4 @@ JAVA_PROJECT=images/javaproject.gif
 CHECKED=images/checked.gif
 UNCHECKED=images/unchecked.gif
 CHECK=images/check.gif
+TYPE=images/types.gif
