--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -62,15 +62,18 @@ JPA_ASSOCIATION_DIALOG_CASCADE=cascade :
 JPA_ASSOCIATION_DIALOG_FETCH=fetch :
 JPA_ASSOCIATION_DIALOG_OPTIONAL=optional :
 JPA_ASSOCIATION_DIALOG_MAPPEDBY=mappedBy :
-REFRESH=Refresh
+REFRESH=&Refresh...
 WIZARD_CHURA_PROJECT_TITLE=Create a Chura Project
 WIZARD_PAGE_CHURA_ROOT_PACKAGE=Root Package Name :
 WIZARD_PAGE_PAGE_FIELD_SELECTION=Edit Page fields
 WIZARD_PAGE_CREATION_DESCRIPTION=Edit Field Modifier, Field Type and Field Name
 WIZARD_PAGE_PAGE_TREE_LABEL=Available Fields ...
-COLUMN_ENTITY_CLASS=Entity Class Name
-COLUMN_ENTITY_FIELD=Entity Field Name
+COLUMN_SRC_CLASS=Type Name
+COLUMN_SRC_FIELD=Field Name
 WIZARD_PAGE_SEPARATE_DESCRIPTION=Do you want to separate Page and Action ?
 WIZARD_PAGE_SEPARATE=Separate Page and Action
+WIZARD_PAGE_SELECT_TYPE=Select type Object ....
+WIZARD_PAGE_CLASS_MAPPING=Class mapping
+WIZARD_PAGE_TABLE_MAPPING=Table mapping
 WIZARD_BASE_PAGE_DESCRIPTION=Do you want to create base class ?
 WIZARD_BASE_PAGE=Create Or Update Base Class
