--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Images.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Images.properties
@@ -35,3 +35,4 @@ JAVA_PROJECT=images/javaproject.gif
 CHECKED=images/checked.gif
 UNCHECKED=images/unchecked.gif
 CHECK=images/check.gif
+TYPE=images/types.gif
