Seasar2.4.0-rc-2に対応しました。
git-svn-id: https://www.seasar.org/svn/chura/trunk@154 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/chura-example/.project
+++ b/chura-example/.project
@@ -14,5 +14,6 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>com.sysdeo.eclipse.tomcat.tomcatnature</nature>
+		<nature>org.seasar.dolteng.eclipse.nature</nature>
 	</natures>
 </projectDescription>
