--- a/dolteng/org.seasar.dolteng.eclipse.plugin/.classpath
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/.classpath
@@ -24,7 +24,7 @@
 	<classpathentry kind="lib" path="lib/xalan-2.7.0.jar"/>
 	<classpathentry kind="lib" path="lib/xml-apis.jar"/>
 	<classpathentry kind="lib" path="lib/s2-extension-2.4.0-rc-2-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="lib/s2-framework-2.4.0-rc-2-SNAPSHOT.jar"/>
+	<classpathentry sourcepath="/seasar2/s2-framework/src/main/java" kind="lib" path="lib/s2-framework-2.4.0-rc-2-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/commons-el-1.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
