--- a/dolteng/org.seasar.dolteng.eclipse.plugin/build.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/build.properties
@@ -23,4 +23,6 @@ bin.excludes = template/kuina/,\
                lib/commons-logging-1.0.4-src.zip,\
                lib/teeda-core-1.0-beta-6-SNAPSHOT-sources.jar,\
                lib/teeda-extension-1.0-beta-6-SNAPSHOT-sources.jar,\
-               lib/xmlParserAPIs-2.6.2.jar
+               lib/xmlParserAPIs-2.6.2.jar,\
+               lib/junit-3.8.1.jar,\
+               lib/hsqldb-1.8.0.1.jar
