--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -77,3 +77,4 @@ WIZARD_PAGE_CLASS_MAPPING=Class mapping
 WIZARD_PAGE_TABLE_MAPPING=Table mapping
 WIZARD_BASE_PAGE_DESCRIPTION=Do you want to create base class ?
 WIZARD_BASE_PAGE=Create Or Update Base Class
+WIZARD_PAGE_DTO_FIELD_SELECTION=Edit Dto fields
