--- a/template/51/.classpath
+++ b/template/51/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="src" path="src/test/resources"/>
 	<classpathentry kind="lib" path="lib/junit-3.8.2.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="__jre_container__"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/aopalliance-1.0.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-collections-3.1.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-el-1.0.jar"/>
@@ -29,21 +29,5 @@
 	<classpathentry sourcepath="src/main/webapp/WEB-INF/lib/sources/teeda-tiger-1.0-beta-6-SNAPSHOT-sources.jar" kind="lib" path="src/main/webapp/WEB-INF/lib/teeda-tiger-1.0-beta-6-SNAPSHOT.jar"/>
 	<classpathentry sourcepath="src/main/webapp/WEB-INF/lib/sources/xercesImpl-2.6.2-sources.jar" kind="lib" path="src/main/webapp/WEB-INF/lib/xercesImpl-2.6.2.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/xmlParserAPIs-2.6.2.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/antlr-2.7.6.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/asm-1.5.3.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/asm-attrs-1.5.3.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/cglib-2.1.3.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-beanutils-1.6.1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/commons-lang-2.1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/dom4j-1.6.1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/ehcache-1.2.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/ejb3-persistence-3.0.jar"/>
-	<classpathentry sourcepath="src/main/webapp/WEB-INF/lib/sources/hibernate-3.2.0.cr2-sources.jar" kind="lib" path="src/main/webapp/WEB-INF/lib/hibernate-3.2.0.cr2.jar"/>
-	<classpathentry sourcepath="src/main/webapp/WEB-INF/lib/sources/hibernate-annotations-3.2.0.cr1-sources.jar" kind="lib" path="src/main/webapp/WEB-INF/lib/hibernate-annotations-3.2.0.cr1.jar"/>
-	<classpathentry sourcepath="src/main/webapp/WEB-INF/lib/sources/hibernate-entitymanager-3.2.0.cr1-sources.jar" kind="lib" path="src/main/webapp/WEB-INF/lib/hibernate-entitymanager-3.2.0.cr1.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jboss-archive-browsing-5.0.0alpha.jar"/>
-	<classpathentry sourcepath="src/main/webapp/WEB-INF/lib/sources/kuina-dao-1.0.0-M1-SNAPSHOT-sources.jar" kind="lib" path="src/main/webapp/WEB-INF/lib/kuina-dao-1.0.0-M1-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/lucene-1.4.3.jar"/>
-	<classpathentry sourcepath="src/main/webapp/WEB-INF/lib/sources/s2hibernate-jpa-1.0.0-beta-2-SNAPSHOT-sources.jar" kind="lib" path="src/main/webapp/WEB-INF/lib/s2hibernate-jpa-1.0.0-beta-2-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="target/test-classes"/>
 </classpath>
