git-svn-id: https://www.seasar.org/svn/chura/trunk@185 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -65,6 +65,8 @@ JPA_ASSOCIATION_DIALOG_MAPPEDBY=mappedBy :
 REFRESH=&Refresh...
 WIZARD_CHURA_PROJECT_TITLE=Create a Chura Project
 WIZARD_PAGE_CHURA_ROOT_PACKAGE=Root Package Name :
+WIZARD_PAGE_CHURA_JRE_CONTAINER=JRE Container
+WIZARD_PAGE_CHURA_USE_DEFAULT_JRE=Use Default JRE ({0})
 WIZARD_PAGE_CHURA_TYPE_SELECTION=Project Type :
 WIZARD_PAGE_PAGE_FIELD_SELECTION=Edit Page fields
 WIZARD_PAGE_CREATION_DESCRIPTION=Edit Field Modifier, Field Type and Field Name
