--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -65,6 +65,8 @@ JPA_ASSOCIATION_DIALOG_MAPPEDBY=mappedBy :
 REFRESH=&Refresh...
 WIZARD_CHURA_PROJECT_TITLE=Create a Chura Project
 WIZARD_PAGE_CHURA_ROOT_PACKAGE=Root Package Name :
+WIZARD_PAGE_CHURA_JRE_CONTAINER=JRE Container
+WIZARD_PAGE_CHURA_USE_DEFAULT_JRE=Use Default JRE ({0})
 WIZARD_PAGE_CHURA_TYPE_SELECTION=Project Type :
 WIZARD_PAGE_PAGE_FIELD_SELECTION=Edit Page fields
 WIZARD_PAGE_CREATION_DESCRIPTION=Edit Field Modifier, Field Type and Field Name
