--- a/.classpath
+++ b/.classpath
@@ -23,8 +23,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/xalan-2.7.0.jar"/>
 	<classpathentry kind="lib" path="lib/xml-apis.jar"/>
-	<classpathentry kind="lib" path="lib/s2-extension-2.4.0-rc-2-SNAPSHOT.jar"/>
-	<classpathentry sourcepath="/seasar2/s2-framework/src/main/java" kind="lib" path="lib/s2-framework-2.4.0-rc-2-SNAPSHOT.jar"/>
+	<classpathentry sourcepath="lib/s2-extension-2.4.0-rc-2-SNAPSHOT-sources.jar" kind="lib" path="lib/s2-extension-2.4.0-rc-2-SNAPSHOT.jar"/>
+	<classpathentry sourcepath="lib/s2-framework-2.4.0-rc-2-SNAPSHOT-sources.jar" kind="lib" path="lib/s2-framework-2.4.0-rc-2-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/commons-el-1.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
