--- a/build.properties
+++ b/build.properties
@@ -1,14 +1,12 @@
 bin.includes = plugin.xml,\
                META-INF/,\
                dolteng-core.jar,\
-               lib/,\
                plugin.properties,\
                plugin_ja.properties,\
                template/
 jars.compile.order = dolteng-core.jar
 source.dolteng-core.jar = target/classes/
-src.includes = lib/,\
-               plugin.properties,\
+src.includes = plugin.properties,\
                plugin.xml,\
                plugin_ja.properties,\
                META-INF/,\
@@ -16,13 +14,4 @@ src.includes = lib/,\
                src/main/resources/,\
                template/
 bin.excludes = template/kuina/,\
-               template/teeda/,\
-               lib/s2-framework-2.4.0-beta-5-SNAPSHOT-sources.jar,\
-               lib/s2-extension-2.4.0-beta-5-SNAPSHOT-sources.jar,\
-               lib/postgresql-8.1-407.jdbc3.jar,\
-               lib/commons-logging-1.0.4-src.zip,\
-               lib/teeda-core-1.0-beta-6-SNAPSHOT-sources.jar,\
-               lib/teeda-extension-1.0-beta-6-SNAPSHOT-sources.jar,\
-               lib/xmlParserAPIs-2.6.2.jar,\
-               lib/junit-3.8.1.jar,\
-               lib/hsqldb-1.8.0.1.jar
+               template/teeda/
