--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Images.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Images.properties
@@ -36,3 +36,4 @@ CHECKED=images/checked.gif
 UNCHECKED=images/unchecked.gif
 CHECK=images/check.gif
 TYPE=images/types.gif
+SYNCED=images/synced.gif
