HTMLとPage,Actionの間に対応関係がある場合、エディタの左側にアイコンが出る様にした。 また、HTMLのgoで始まるIDは、対応するhtmlがある時、アイコンが出力される。
git-svn-id: https://www.seasar.org/svn/chura/trunk@203 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
@@ -279,17 +279,40 @@
    </extension>
    <extension
          id="pageMapper"
-         name="Dolteng Marker"
          point="org.eclipse.core.resources.markers">
       <persistent value="true"/>
       <super type="org.eclipse.core.resources.textmarker"/>
+      <attribute name="org.seasar.dolteng.eclipse.pageMapper.mappingType"/>
+      <attribute name="org.seasar.dolteng.eclipse.pageMapper.mappingField"/>
+   </extension>
+   <extension
+         id="htmlMapper"
+         point="org.eclipse.core.resources.markers">
+      <persistent value="true"/>
+      <super type="org.eclipse.core.resources.textmarker"/>
+      <attribute name="org.seasar.dolteng.eclipse.htmlMapper.id"/>
+      <attribute name="org.seasar.dolteng.eclipse.htmlMapper.htmlpath"/>
+      <attribute name="org.seasar.dolteng.eclipse.htmlMapper.mappingElem"/>
    </extension>
    <extension
          point="org.eclipse.ui.ide.markerImageProviders">
       <imageprovider
             icon="icons/synced.gif"
-            id="org.seasar.dolteng.eclipse.imageprovider"
+            id="org.seasar.dolteng.eclipse.imageprovider.page"
             markertype="org.seasar.dolteng.eclipse.pageMapper"/>
+      <imageprovider
+            icon="icons/synced.gif"
+            id="org.seasar.dolteng.eclipse.imageprovider.html"
+            markertype="org.seasar.dolteng.eclipse.htmlMapper"/>
+   </extension>
+   <extension
+         point="org.eclipse.ui.ide.markerResolution">
+      <markerResolutionGenerator
+            class="org.seasar.dolteng.eclipse.marker.PageMapper"
+            markerType="org.seasar.dolteng.eclipse.pageMapper"/>
+      <markerResolutionGenerator
+            class="org.seasar.dolteng.eclipse.marker.HtmlMapper"
+            markerType="org.seasar.dolteng.eclipse.htmlMapper"/>
    </extension>
 
 
